--- a/recetas.html
+++ b/recetas.html
@@ -18,9 +18,14 @@
             <p class="subtitulo">Cocina para Vagos</p>
         </div>
         <section class="recetas-container" id="recetas-container"></section>
-        <section class="footer"><button type="submit" class="btn-atras" id="atras">Volver Atras</button></section>
+        <section class="footer">
+            <a href="ingredientes.html" class="btn-enlace">
+                <button type="submit" class="btn-atras" id="atras">Volver Atras</button>
+            </a>
+        </section>
     </main>
     <script src="js/recetas.js"></script>
 </body>
 </html>
+
     
