--- a/preparacion.html
+++ b/preparacion.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Jersey+20&family=Julee&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Jersey+20&family=Julee&display=swap"rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Jersey+20&family=Julee&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/preparacion.css">
     <title>Preparacion</title>
 </head>
@@ -17,9 +19,11 @@
     <div class="receta-card">
         <div class="header">
             <span class="header-icon back-arrow">
-                <svg class="icon" viewBox="0 0 24 24">
-                    <path d="M15.41 7.41L14 6L8 12L14 18L15.41 16.59L10.83 12L15.41 7.41Z" />
-                </svg>
+                <a href="recetas.html">
+                    <svg class="icon" viewBox="0 0 24 24">
+                        <path d="M15.41 7.41L14 6L8 12L14 18L15.41 16.59L10.83 12L15.41 7.41Z" />
+                    </svg>
+                </a>
             </span>
             <span class="header-icon heart">
                 <svg class="icon" viewBox="0 0 24 24">
@@ -28,6 +32,7 @@
                 </svg>
             </span>
         </div>
+
 
         <div class="imagen-container">
             <div class="bg-shape"></div>
@@ -85,12 +90,12 @@
 
         <h2 class="section-titulo">Detalles:</h2>
         <div class="detalles-box">
-            <p class="detalles-texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum inventore vitae enim voluptates, adipisci praesentium laboriosam similique itaque excepturi blanditiis dicta fugit aut hic, repudiandae beatae eveniet mollitia, quod vero!</p>
+            <p class="detalles-texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum inventore vitae
+                enim voluptates, adipisci praesentium laboriosam similique itaque excepturi blanditiis dicta fugit aut
+                hic, repudiandae beatae eveniet mollitia, quod vero!</p>
         </div>
 
     </div>
 </body>
+
 </html>
-
-
-
