--- a/recetas.html
+++ b/recetas.html
@@ -19,7 +19,7 @@
     <div class="receta-card">
         <header class="header">
             <span class="header-icon back-arrow">
-                <a href="recetas.html">
+                <a href="ingredientes.html">
                     <svg class="icon" viewBox="0 0 24 24">
                         <path d="M15.41 7.41L14 6L8 12L14 18L15.41 16.59L10.83 12L15.41 7.41Z" />
                     </svg>
