--- a/recetas.html
+++ b/recetas.html
@@ -26,7 +26,7 @@
                 </a>
             </span>
             <p class="header-titulo">Recetas</p>
-            <img class="logo-imagen" src="./assets/img/logo_2.webp" alt="logo-fogon-feliz">
+            <img class="icon logo-imagen" src="./assets/img/logo_2.webp" alt="logo-fogon-feliz">
         </header>
 
 
