Añadido logo animado

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
       <main class="container">
         <div class="container-principal">
-            <img src="assets/img/logo_2.webp" alt="logo el fogon feliz" class="img-logo">
-            <h1 class="titulo">El Fogón Feliz</h1>
+            <img src="assets/img/logo-final-2.gif" alt="logo el fogon feliz" class="img-logo">
+            <!-- <h1 class="titulo">El Fogón Feliz</h1> -->
             <a href="ingredientes.html" class="btn-enlace">
                 <button type="submit" class="btn-inicio">Inicio</button>
             </a>
