--- a/ingredientes.html
+++ b/ingredientes.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Jersey+20&family=Julee&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ingredientes.css">
     <title>ingredientes</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div class="header">
             <img src="assets/img/logo_2.webp" alt="Logo el Fogón Feliz" class="img-logo">
             <h1 class="titulo">El Fogón Feliz</h1>
-            <p class="subtitulo">Cocina para Vagos</p>
+            <!-- <p class="subtitulo">Cocina para Vagos</p> -->
         </div>
 
         <!-- Los ingredientes -->
