Añadido el icon de utensilios
añadi el utensilio de tenedor y cuchillo que representa el numero de persona

--- a/preparacion.html
+++ b/preparacion.html
@@ -10,6 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Jersey+20&family=Julee&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
     <link rel="stylesheet" href="css/preparacion.css">
     <title>Preparacion</title>
 </head>
@@ -64,7 +66,12 @@
                 </svg>
                 <span>125 kcal</span>
             </div>
+            <div class="info-item">
+                <i class="fa-sharp-duotone fa-solid fa-utensils"></i>
+                <span>2</span>
+            </div>
         </div>
+
 
         <!-- ingredientes -->
 
