--- a/ingredientes.html
+++ b/ingredientes.html
@@ -22,7 +22,8 @@
         <!-- Los ingredientes -->
         <section class="content-ingredientes">
             <h2 class="titulo-ingredientes">Elige los ingredientes que tienes en tu nevera:</h2>
-            <p id="instrucciones">Por favor, elige exactamente 5 para ver tus recetas.</p>
+            <p id="instrucciones">Por favor, elige exactamente 5 ingredientes para ver tus recetas.</p>
+        
             <div class="grid-ingredientes" id="grid-ingredientes-container"></div>
         </section>
 
