--- a/preparacion.html
+++ b/preparacion.html
@@ -95,14 +95,55 @@
             </div>
         </div>
 
-        <h2 class="section-titulo">Detalles:</h2>
-        <div class="detalles-box">
-            <p class="detalles-texto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum inventore vitae
-                enim voluptates, adipisci praesentium laboriosam similique itaque excepturi blanditiis dicta fugit aut
-                hic, repudiandae beatae eveniet mollitia, quod vero!</p>
+
+        <!-- Preparacion de la receta -->
+        <h2 class="section-titulo">Preparación:</h2>
+        <div class="preparacion-box">
+            <!-- lista de pasos a seguir por el usuario -->
+            <ul class="preparacion-lista">
+
+                <li class="preparacion-pasos">
+                    <input type="checkbox" id="paso1">
+                    <label for="paso1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsum eaque!
+                        Temporibus sit doloremque quaerat, vitae, porro culpa, rerum saepe quibusdam molestiae modi
+                        omnis. Eius totam libero labore dolore quos.</label>
+                </li>
+
+                    <li class="preparacion-pasos">
+                    <input type="checkbox" id="paso2">
+                    <label for="paso2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsum eaque!
+                        Temporibus sit doloremque quaerat, vitae, porro culpa, rerum saepe quibusdam molestiae modi
+                        omnis. Eius totam libero labore dolore quos.</label>
+                </li>
+
+                    <li class="preparacion-pasos">
+                    <input type="checkbox" id="paso3">
+                    <label for="paso3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsum eaque!
+                        Temporibus sit doloremque quaerat, vitae, porro culpa, rerum saepe quibusdam molestiae modi
+                        omnis. Eius totam libero labore dolore quos.</label>
+                </li>
+
+                    <li class="preparacion-pasos">
+                    <input type="checkbox" id="paso4">
+                    <label for="paso4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsum eaque!
+                        Temporibus sit doloremque quaerat, vitae, porro culpa, rerum saepe quibusdam molestiae modi
+                        omnis. Eius totam libero labore dolore quos.</label>
+                </li>
+
+                    <li class="preparacion-pasos">
+                    <input type="checkbox" id="paso5">
+                    <label for="paso5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, ipsum eaque!
+                        Temporibus sit doloremque quaerat,</label>
+                </li>
+
+                
+
+            </ul>
         </div>
 
     </div>
+
+    <script src="js/preparacion.js"></script>
 </body>
 
 </html>
