--- a/preparacion.html
+++ b/preparacion.html
@@ -80,18 +80,22 @@
             <div class="ingrediente-item">
                 <img class="ingrediente-imagen" src="./assets/img/aguacate.webp" alt="Aguacate">
                 <span class="ingrediente-nombre">Aguacate</span>
+                <span class="ingrediente-cantidad">1 unidad</span>
             </div>
             <div class="ingrediente-item">
                 <img class="ingrediente-imagen" src="./assets/img/pimientos.webp" alt="Pimientos">
                 <span class="ingrediente-nombre">Pimientos</span>
+                <span class="ingrediente-cantidad">1 mediano</span>
             </div>
             <div class="ingrediente-item">
                 <img class="ingrediente-imagen" src="./assets/img/calabacin.webp" alt="Calabacin">
                 <span class="ingrediente-nombre">Calabacin</span>
+                <span class="ingrediente-cantidad">1 unidad</span>
             </div>
             <div class="ingrediente-item">
                 <img class="ingrediente-imagen" src="./assets/img/pasta.webp" alt="Pasta">
                 <span class="ingrediente-nombre">Pasta</span>
+                <span class="ingrediente-cantidad"> 500g</span>
             </div>
         </div>
 
